# MUFG

./: .gitignore  README.md  main.py  preprocess.py  pyproject.toml
conf/: main.yaml
conf/data/: base.yaml
conf/exp/: optuna.yaml
conf/model/params/: catboost.yaml  xgblgbmcat.yaml
dataset/: __init__.py  dataset.py  utils.py
experiment/: experiment.py  utils.py
model/: __init__.py  base_model.py  get_model.py  model.py
